# model-test-agent

./: .gitignore  README.md  pyproject.toml
examples/: local_mock_runbook.md  local_mock_workflow.json  mock_client.py  mock_notes.txt  mock_server.py  sample_benchmark.md  sample_workflow.json  slow_server_minimal.md  slow_server_runbook.md  slow_server_workflow.json  slow_start_http_server.py
src/model_test_agent/: __init__.py  agent.py  cli.py  config.py  document_loader.py  models.py  openai_compat.py  planner.py  progress.py  workflow_enricher.py  workflow_normalizer.py  workflow_schema.py  workflow_validation.py
src/model_test_agent/runtime/: __init__.py  background.py  executor.py  factory.py  failure_summary.py  pty.py  session_backend.py  session_manager.py  step_handlers.py  step_runner.py  structured_logging.py  tmux.py
tests/: test_agent.py  test_cli.py  test_config.py  test_executor.py  test_failure_summary.py  test_local_workflow_integration.py  test_models.py  test_openai_compat.py  test_planner.py  test_progress.py  test_pty_backend.py  test_slow_server_system.py  test_step_runner.py  test_tmux.py  test_workflow_enricher.py  test_workflow_validation.py
