[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "model-test-agent"
version = "0.1.0"
description = "Document-driven AI model execution and test agent for Linux CLI workflows."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Codex" }
]
dependencies = []

[project.optional-dependencies]
pdf = ["pymupdf>=1.24"]
dev = ["pytest>=8.0"]

[project.scripts]
mta = "model_test_agent.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
